--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -114,6 +114,8 @@ h6 {
     color: #f8f8f8;
     background: url(../img/map.png) no-repeat center center;
     background-size: cover;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .banner h2 {
