--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -112,7 +112,7 @@ h6 {
 .banner {
     padding: 100px 0;
     color: #f8f8f8;
-    background: url(../img/map1.png) no-repeat center center;
+    background: url(../img/map.png) no-repeat center center;
     background-size: cover;
     max-width: 100%;
     max-height: 100%;
@@ -129,7 +129,7 @@ h6 {
 }
 
 .banner p {
-    color: #FFFFFF ;
+    color: #FFFFFF;
     float: right;
     margin-right: 40px;
     margin-top: 200px; 
