--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -116,6 +116,7 @@ h6 {
     background-size: cover;
     max-width: 100%;
     max-height: 100%;
+    position: relative;
 }
 
 .banner h2 {
@@ -133,7 +134,7 @@ h6 {
     float: right;
     margin-right: 40px;
     margin-top: 200px; 
-    position: absolute;
+    position: relative;
 }
 
 .banner-social-buttons {
