--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -112,8 +112,8 @@ h6 {
 .banner {
     padding: 100px 0;
     color: #f8f8f8;
-    background: url(../img/map.png) no-repeat center center;
-    background-size: cover;
+    /*background: url(../img/map.png) no-repeat center center;
+    background-size: cover;*/
     max-width: 100%;
     max-height: 100%;
     position: relative;
